# mbm-radar

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/bot/: __init__.py  bot_service.py
app/config/: __init__.py
app/core/: config.py  logging.py
app/database/: __init__.py  init_db.py  session.py
app/filters/: __init__.py  shariah_filter.py  stock_filter.py
app/indicators/: __init__.py  technical_analysis.py
app/middleware/: __init__.py
app/models/: __init__.py  models.py
app/notifications/: __init__.py  notifier.py
docker/: Dockerfile  nginx.conf
docs/: architecture_diagram.md  deployment_guide.md  free_deployment.md
migrations/: env.py
scratch/: apply_relax_test_prefs.py  apply_user_test_prefs.py  check_notification_223.py  clear_stock_shariah_cache.py  delete_sig_223.py  inject_shariah_bypass.py  inject_simulation_mode.py  inject_stage1_logging.py  inspect_db_prefs.py  inspect_signal_223.py  migrate_is_simulated.py  relax_all_filters.py  restore_final_production.py  restore_prod_db_prefs.py  send_test_alert.py  set_test_db_prefs.py  set_test_db_prefs_zero.py  test_batch_param.py  test_db.py  test_fmp.py  test_fmp_all.py  test_fmp_endpoints.py  test_fmp_quotes.py  test_fmp_stable.py  test_stable_batch.py  test_stable_historical.py  test_stable_params.py  test_stable_resolved.py
tests/: __init__.py  test_batch_scanner.py  test_filters.py  test_pipeline_integration.py  test_scoring.py  test_ta.py
(+22 files in other folders)
