[tool.poetry]
name = "mbm-radar"
version = "0.1.0"
description = "A professional-grade US Stock Scanner and Telegram Alerts System"
authors = ["Antigravity"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
aiogram = "^3.4.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
asyncpg = "^0.29.0"
redis = "^5.0.3"
apscheduler = "^3.10.4"
pandas = "^2.2.1"
ta = "^0.11.0"
aiohttp = "^3.9.3"
websockets = "^12.0"
cryptography = "^42.0.5"
pyjwt = "^2.8.0"
python-multipart = "^0.0.9"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
black = "^24.2.0"
ruff = "^0.3.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
